# misgit

./: README.md  misgit  pyproject.toml  setup.cfg
multigit/: gitops.py  main.py  misc.py
