# setup.cfg is an ini file that contains option defaults for setup.py commands
# See https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name = misgit
version = 0.1.0
author = Mads Meisner-Jensen
maintainer = Mads Meisner-Jensen
description = Multi Info Summary of (multiple) git repos (recursively) below some folder
long_description = file: README.md
long_description_content_type = text/markdown
license: GPL-3.0-only
keywords: git
url = https://github.com/mmeisner/misgit
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3.0
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = multigit
python_requires = >=3.6

[options.entry_points]
console_scripts =
    misgit = multigit.main:main

# setup.cfg files are general purpose configuration files can also be used
# to hold pytest configuration if they have a [tool:pytest] section.
#
# Usage of setup.cfg is not recommended unless for very simple use cases.
# .cfg files use a different parser than pytest.ini and tox.ini which might
# cause hard to track down problems.
# pytest exclude directories
[tool:pytest]
